# lex-rank-summarizer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yaml
src/lex_rank_summarizer/: main.py
src/s2terminal_lex_rank_summarizer/: main.py  summarize.py
tests/: test_lex_rank_summarizer.py
