[tool.poetry]
name = "s2terminal-lex-rank-summarizer"
version = "0.1.1"
description = "This is a CLI tool that uses LexRank to translate sentences in 3 lines."
authors = ["s2terminal <suzuki.sh@s2terminal.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/s2terminal/lex-rank-summarizer"
repository = "https://github.com/s2terminal/lex-rank-summarizer"

[tool.poetry.scripts]
lex-rank-summarizer = "s2terminal_lex_rank_summarizer.main:main"

[tool.poetry.dependencies]
python = "^3.9"
Janome = "^0.4.1"
sumy = "^0.8.1"
numpy = "^1.21.0"
tinysegmenter = "^0.4"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
